fixed layout when card title is too long

--- a/src/app/core/components/card/card.component.scss
+++ b/src/app/core/components/card/card.component.scss
@@ -14,3 +14,11 @@ p {
   -webkit-line-clamp: 3; /* number of lines to show */
   -webkit-box-orient: vertical;
 }
+
+#cardTitle {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
